@@ -14,6 +14,10 @@ Changes in @NEW@:
     * A list of X.org mirrors has been added to the default mirrors.
     * "cvc diff" now returns 2 on error, 1 if there are differences, and
       0 if there are no differences (CNY-938).
+    * added addResolveSource option will will change how dependeny resolution
+      is done when building a group - instead of searching the label path
+      defined in the group for solutions, the resolve source will be searched
+      instead. (CNY-1061)
 
   o Bug Fixes
     * The build time is now displayed properly as "(unknown)" if a
